# Quake-2

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
ctf/: CMakeLists.txt  g_local.h
game/: CMakeLists.txt  g_local.h
irix/: glw_imp.c
qcommon/: common.c  qcommon.h
ref_gl/: CMakeLists.txt  gl_local.h  gl_rmain.c
ref_soft/: CMakeLists.txt
server/: CMakeLists.txt
win32/: CMakeLists.txt  glw_imp.c  sys_win.c  winquake.h
